# solid-design-principles

./: .gitignore  README.md
ch02/: ch_02_02.py
linkedinLearning/c-plus-plus-design-patterns-creational/: 02_02_CompositionExample.cpp  03_02_FactoryExample.cpp  04_02_AbstractFactoryExample.cpp  05_02_BuilderPattern.cpp
linkedinLearning/ch02/: ch_02_01.py
linkedinLearning/no_solid_design/: card.py
no_solid_design/: card.py
pluralSight/designPatternsInCpp_Creational/: BoostDI.cpp  DIP.cpp  ISP.cpp  MaybeMonad.cpp  OCP.cpp  README.md  SRP.cpp
pluralSight/designPatternsInCpp_Creational/2-Builder/: 02_03_Life_Without_Builders.cpp  02_04_Builder.cpp  02_05_Fluent_Builder.cpp  02_06_Groovy_style_Builder.cpp
pluralSight/designPatternsInCpp_Creational/2-Builder/02_07_Facets/: Facets.cpp  Makefile  Person.h  PersonAddressBuilder.h  PersonJobBuilder.h  builder_facets
pluralSight/designPatternsInCpp_Creational/CH04-Factories/: 04_03_Point.cpp  04_04_FactoryMethod.cpp  04_05_Factory.cpp  04_06_InnerFactory.cpp
pluralSight/designPatternsInCpp_Creational/CH04-Factories/04_07_AbstractFactory/: AbstractFactory.cpp  CoffeeFactory.h  DrinkFactory.h  HotDrink.h  HotDrinkFactory.h  TeaFactory.h
pluralSight/designPatternsInCpp_Creational/preliminaries/: LSP.cpp
pluralSight/structural-adoptorToDecorator/: README.md
pluralSight/structural-adoptorToDecorator/Adaptor/: CMakeLists.txt  README.adoc
pluralSight/structural-adoptorToDecorator/Bridge/: CMakeLists.txt  README.adoc
pluralSight/structural-adoptorToDecorator/Bridge/include/: Encoder.h  MovieData.h  MovieSerializer.h
pluralSight/structural-adoptorToDecorator/Bridge/src/: main.cpp
pluralSight/structural-adoptorToDecorator/Composite/: CMakeLists.txt  README.adoc
pluralSight/structural-adoptorToDecorator/Composite/include/: MovieData.h  MovieGroup.h  MovieInfo.h
pluralSight/structural-adoptorToDecorator/Composite/src/: main.cpp
pluralSight/structural-adoptorToDecorator/Decorator/: CMakeLists.txt  README.adoc
pluralSight/structural-adoptorToDecorator/Decorator/include/: OutputStream.h  StreamDecorator.h
pluralSight/structural-adoptorToDecorator/Decorator/src/: main.cpp
pluralSight/structural-adoptorToDecorator/PImpl/: CMakeLists.txt  README.adoc
pluralSight/structural-adoptorToDecorator/PImpl/include/: MyClass.h
pluralSight/structural-adoptorToDecorator/PImpl/src/: MyClass.cpp  main.cpp
structuralPattern/adapter/: String.cpp  example1.cpp  example2.cpp
structuralPattern/bridge/: impl.cpp  render.cpp
(+21 files in other folders)
